--- a/recipe.yml
+++ b/recipe.yml
@@ -2,7 +2,7 @@ name: Custom Vanilla Desktop # Replace this name with your image name
 id: custom # Replace this ID with your image ID
 stages:
 - id: build
-  base: ghcr.io/vanilla-os/desktop:main # Optionally, Replace this image URL with a different one i.e. nvidia:main, etc
+  base: ghcr.io/vanilla-os/nvidia:main # Optionally, Replace this image URL with a different one i.e. nvidia:main, etc
   singlelayer: false
   labels:
     maintainer: self-maintained # Optionally, Replace this with your name
@@ -23,23 +23,54 @@ stages:
 
   # Put your custom actions behind this comment
 
-  - name: example-packages # Sample module using the built-in Apt module to install packages
+  - name: surface-kernel
+    type: shell
+    commands:
+    - >- 
+      wget -qO - https://raw.githubusercontent.com/linux-surface/linux-surface/master/pkg/keys/surface.asc \
+      | gpg --dearmor | dd of=/etc/apt/trusted.gpg.d/linux-surface.gpg
+    - >-
+      echo "deb [arch=amd64] https://pkg.surfacelinux.com/debian release main" \
+      | tee /etc/apt/sources.list.d/linux-surface.list
+    - apt-get update
+
+  - name: surface-kernel
+    type: shell
+    commands:
+    - >-
+      apt-mark hold linux-image-surface linux-headers-surface libwacom-surface iptsd surface-control
+    modules:
+      - name: install-surface-kernel
+        type: apt
+        source:
+          packages:
+            - linux-image-surface
+            - linux-headers-surface
+            - libwacom-surface
+            - iptsd
+            - surface-control
+            - surface-dtx-daemon
+
+  - name: install secure boot key
     type: apt
     source:
       packages:
-      - vim
+        - linux-surface-secureboot-mok
 
-  - name: example-commands # Sample module demonstrating the Shell module with custom commands
+  - name: rebuilt-initrd
     type: shell
     commands:
-    - echo Example output
+    - update-initramfs -c -k all
 
-  - name: example-modules # Sample module demonstrating importing local and remote modules
-    type: includes
-    includes:
-      - modules/50-install-debs.yml # Sample local module present in this repository
-      - gh:vanilla-os/dev-image:main:modules/00-basics.yml # Sample GitHub remote module in the format: `gh:your-name/your-repo:branch:modules/file.yml`
-      - https://raw.githubusercontent.com/Vanilla-OS/dev-image/main/modules/05-go.yml # Sample full URL remote module
+  - name: update grub config
+    type: shell
+    commands:
+    - update-grub
+
+  - name: enable surface-dtx-daemon
+    type: shell
+    commands:
+    - systemctl enable surface-dtx-daemon.service
 
   # Put your custom actions before this comment
 
